--- a/machine-learning-with-python-cookbook/01_working_with_vector_and_matrix.ipynb
+++ b/machine-learning-with-python-cookbook/01_working_with_vector_and_matrix.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPKTWfAf1PrDMVc44R/k1bq",
+      "authorship_tag": "ABX9TyNyIZ78Gttr4od8APb8pXKB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B2azLQjB0cJt",
-        "outputId": "02ed11eb-4ddc-4aa6-d860-0305aec39d76"
+        "outputId": "2730ec00-d34c-44c0-ed47-1ccb8fac9c34"
       },
       "execution_count": 2,
       "outputs": [
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2lgYnstk1ctC",
-        "outputId": "8ffe9731-0b97-40b2-9cbf-3e457b6744cd"
+        "outputId": "a2609394-91b8-43a2-c181-e165e0b26987"
       },
       "execution_count": 3,
       "outputs": [
@@ -143,7 +143,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eUvMCmwz1_Bm",
-        "outputId": "a7694f1c-f9db-4bba-d0ca-f2159096ab6e"
+        "outputId": "879b6aec-5dca-40b9-dada-e3ef425b697d"
       },
       "execution_count": 4,
       "outputs": [
@@ -170,7 +170,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xF4HutED2Ygc",
-        "outputId": "b3fe6de6-c6b1-4200-998e-dce81e75cea2"
+        "outputId": "9c950236-0014-4dbd-d6dd-529bac08e222"
       },
       "execution_count": 5,
       "outputs": [
@@ -196,7 +196,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s3r7EWHt2fg-",
-        "outputId": "b74c9304-f337-4a8a-997b-8ffc987153d7"
+        "outputId": "a4ce7456-23a1-4836-b430-15a1c8ea6ec7"
       },
       "execution_count": 6,
       "outputs": [
@@ -223,7 +223,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9Qa8S3Dq3Sar",
-        "outputId": "c8fc625e-958b-4e62-a001-22de29daf104"
+        "outputId": "163648c4-ec7d-457c-ec9a-7bb63956812c"
       },
       "execution_count": 7,
       "outputs": [
@@ -250,7 +250,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gZVfsxd33XpZ",
-        "outputId": "e480b790-0f5b-4b47-ea62-8cd721fe5a56"
+        "outputId": "17d80bf1-c975-4d82-e558-e4729d36b3eb"
       },
       "execution_count": 8,
       "outputs": [
@@ -277,7 +277,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JCEZDbJT3ZrQ",
-        "outputId": "51fddfc3-98e6-4a17-80c8-a6a91914430d"
+        "outputId": "1d75f6b4-3ba2-44b6-d5e6-1480bc9f4bc4"
       },
       "execution_count": 9,
       "outputs": [
@@ -304,7 +304,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uzrKjc0S3gv2",
-        "outputId": "16fc71f9-3919-47f9-f209-6c8fb9a463fb"
+        "outputId": "c066ff94-ec1f-47ce-e396-f0e2e05db639"
       },
       "execution_count": 10,
       "outputs": [
@@ -331,7 +331,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5JgLmA1h3nAn",
-        "outputId": "f88bd512-52dd-4f94-bac4-81b92b630844"
+        "outputId": "b11cb07f-de2f-4733-95f6-3e8afb1b4fc5"
       },
       "execution_count": 11,
       "outputs": [
@@ -357,7 +357,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3NKsUA2g393k",
-        "outputId": "de863c03-8699-4a95-a8de-a54e048c7a5b"
+        "outputId": "083d81e1-455f-4f92-89b6-4af854714b4b"
       },
       "execution_count": 12,
       "outputs": [
@@ -386,7 +386,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ddMSWw0X3tlT",
-        "outputId": "fba4b286-f7b5-404d-b235-2442d671a4fa"
+        "outputId": "e6741af9-d232-4f89-e0fb-919f8323b8f2"
       },
       "execution_count": 13,
       "outputs": [
@@ -414,7 +414,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_lSHjgS132rO",
-        "outputId": "3285a0e1-b934-49be-90d8-c026a1ce1a5e"
+        "outputId": "a2f09ca9-b685-4d02-9071-3a048aa6af83"
       },
       "execution_count": 14,
       "outputs": [
@@ -442,7 +442,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uHIn1Vpl4JCv",
-        "outputId": "7a25b888-cca2-4e1d-d007-1e920361f126"
+        "outputId": "3a398416-138e-4c4a-c456-6515354b6e78"
       },
       "execution_count": 15,
       "outputs": [
@@ -470,7 +470,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YXeB4y_y4RkX",
-        "outputId": "2e9f69e2-7c22-4d61-c437-7da7d1e4f48a"
+        "outputId": "e7260b9e-0207-4ddf-c653-dcb409c3465e"
       },
       "execution_count": 16,
       "outputs": [
@@ -515,7 +515,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2MjiNWDJ4YHz",
-        "outputId": "5a590e9e-c070-4376-d13a-44103d26169d"
+        "outputId": "2d19bedf-3e9b-4ee7-cda4-caf261630bdd"
       },
       "execution_count": 17,
       "outputs": [
@@ -542,7 +542,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IRjOeoYf4uWw",
-        "outputId": "757a3275-399e-4fe2-e830-0648d13ac206"
+        "outputId": "b60bb229-4463-4af5-a9f2-1aac90a82745"
       },
       "execution_count": 18,
       "outputs": [
@@ -569,7 +569,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2c7myP9240G9",
-        "outputId": "2b4381e0-58ff-4c6b-f643-9d547b22c93a"
+        "outputId": "0ede5d19-3378-48de-ceb0-0a6cfaf54ef0"
       },
       "execution_count": 19,
       "outputs": [
@@ -615,7 +615,7 @@
       ],
       "metadata": {
         "id": "7JUrlg905CFf",
-        "outputId": "5117be1b-ef18-4699-b8a1-55f6a8bf1ac4",
+        "outputId": "9bcc14ef-31b0-4a4e-f9a6-6335d0797a33",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -644,7 +644,7 @@
       ],
       "metadata": {
         "id": "OyAweszWJQEj",
-        "outputId": "545793c5-ce09-42b2-cfcd-bda697fdd384",
+        "outputId": "8f7b1bf3-e2a9-486e-8a72-c1164e6cd1fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -689,7 +689,7 @@
       ],
       "metadata": {
         "id": "dfPJCwFXJgmC",
-        "outputId": "960ca0b3-2331-43c6-d579-ecdc0eac09e3",
+        "outputId": "ee807d96-034d-4a6c-99db-294535d491bd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -716,7 +716,7 @@
       ],
       "metadata": {
         "id": "znSw5oRbJzs0",
-        "outputId": "47fb4cc0-d6a8-4469-8c9b-83a710b5ebb8",
+        "outputId": "d02b022e-5eb6-4485-d630-3552e6f0f04c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -743,7 +743,7 @@
       ],
       "metadata": {
         "id": "W4ZMVEWKKDQm",
-        "outputId": "0d884302-a57f-460e-85e1-e72689f1d6f0",
+        "outputId": "e158eb09-8b17-4b6b-8c41-3a712876f991",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -770,7 +770,7 @@
       ],
       "metadata": {
         "id": "Meq6qPWHKGR9",
-        "outputId": "25302be2-94e3-4cd2-a8d2-c5921ca5b5c8",
+        "outputId": "91c34580-39f3-491a-d7bf-abd2682c644c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -800,9 +800,420 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Create matrix\n",
+        "matrix = np.array([\n",
+        "    [1, 2, 3],\n",
+        "    [4, 5, 6],\n",
+        "    [7, 8, 9]\n",
+        "])\n",
+        "\n",
+        "# mean\n",
+        "np.mean(matrix)"
+      ],
+      "metadata": {
+        "id": "eb3ClXmTnigk",
+        "outputId": "3cc9097f-d0d8-4cf8-96c6-a66efcfebca8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# variance\n",
+        "np.var(matrix)"
+      ],
+      "metadata": {
+        "id": "GrPKrQO3IQ_s",
+        "outputId": "1a1848cf-2688-462f-de4d-1af27f5f61b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6.666666666666667"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# standard deviation\n",
+        "np.std(matrix)"
+      ],
+      "metadata": {
+        "id": "i7SVaHY-IUDG",
+        "outputId": "38b232bb-6f82-4201-b0df-e0019ab3105d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.581988897471611"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Find the mean value in each column\n",
+        "np.mean(matrix, axis=0)"
+      ],
+      "metadata": {
+        "id": "TiF-rJGyIdyc",
+        "outputId": "95f0f8c1-4764-48b1-a67b-c299ab044979",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([4., 5., 6.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Find the mean value in each row\n",
+        "np.mean(matrix, axis=1)"
+      ],
+      "metadata": {
+        "id": "B46XuJySIk4Y",
+        "outputId": "1c67cc2a-ebb8-46f1-861c-3e294afd509f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([2., 5., 8.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Reshaping Arrays"
+      ],
+      "metadata": {
+        "id": "vy2pOdVHIx42"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create 4x3 matrix\n",
+        "matrix = np.array([\n",
+        "    [1, 2, 3],\n",
+        "    [4, 5, 6],\n",
+        "    [7, 8, 9],\n",
+        "    [10, 11, 12]\n",
+        "])\n",
+        "\n",
+        "# Reshape matrix into 2x6 matrix\n",
+        "matrix.reshape(2, 6)"
+      ],
+      "metadata": {
+        "id": "TGFMrTPUIyeO",
+        "outputId": "c6ad803b-36dd-4a67-a324-1660e2089fdc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 1,  2,  3,  4,  5,  6],\n",
+              "       [ 7,  8,  9, 10, 11, 12]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 2 row and as many columns as needed\n",
+        "matrix.reshape(2, -1)"
+      ],
+      "metadata": {
+        "id": "Eii9CZwVJVu3",
+        "outputId": "e1b4d4a7-8533-4e94-bbea-c72e42173c8b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 1,  2,  3,  4,  5,  6],\n",
+              "       [ 7,  8,  9, 10, 11, 12]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 3 row and as many columns as needed\n",
+        "matrix.reshape(3, -1)"
+      ],
+      "metadata": {
+        "id": "mlnEKzSHJaBv",
+        "outputId": "95e77f6e-bbd6-4e79-f568-3c132ae89bca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 1,  2,  3,  4],\n",
+              "       [ 5,  6,  7,  8],\n",
+              "       [ 9, 10, 11, 12]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# one row and as many columns as needed\n",
+        "matrix.reshape(1, -1)"
+      ],
+      "metadata": {
+        "id": "uWhMPgsbJn6j",
+        "outputId": "782f2a17-6913-472e-83e5-511c25f7dfa3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# return a one-dimensional array of that length\n",
+        "matrix.reshape(12)"
+      ],
+      "metadata": {
+        "id": "pjgp2Wh4Jz0I",
+        "outputId": "026b2c64-fbe2-44d7-f8da-ec4d5bcc182e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Transposing"
+      ],
+      "metadata": {
+        "id": "s85RYJYyKHQr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create matrix\n",
+        "matrix = np.array([\n",
+        "    [1, 2, 3],\n",
+        "    [4, 5, 6],\n",
+        "    [7, 8, 9]\n",
+        "])\n",
+        "\n",
+        "# Transpose matrix\n",
+        "matrix.T"
+      ],
+      "metadata": {
+        "id": "-LNr0RgDKKdG",
+        "outputId": "10d2d949-662c-4f17-90b3-0551af321fcb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 4, 7],\n",
+              "       [2, 5, 8],\n",
+              "       [3, 6, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# a vector can’t be transposed because it’s just a collection of values\n",
+        "np.array([1, 2, 3, 4, 5, 6]).T"
+      ],
+      "metadata": {
+        "id": "_rKwVkOBKbqN",
+        "outputId": "de0c432d-c06b-40e4-80a1-375d0bd91987",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3, 4, 5, 6])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# converting a row vector to a column vector\n",
+        "np.array([[1, 2, 3, 4, 5, 6]]).T"
+      ],
+      "metadata": {
+        "id": "SEs5Q-djKuYW",
+        "outputId": "fe6fd14e-e2aa-4d57-d34e-627ba3ffc5c3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1],\n",
+              "       [2],\n",
+              "       [3],\n",
+              "       [4],\n",
+              "       [5],\n",
+              "       [6]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Flattening Matrix"
+      ],
+      "metadata": {
+        "id": "TPFMLP8lLAN1"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "eb3ClXmTnigk"
+        "id": "w84FwD5sLC-p"
       },
       "execution_count": null,
       "outputs": []
