--- a/machine-learning-with-python-cookbook/01_working_with_vector_and_matrix.ipynb
+++ b/machine-learning-with-python-cookbook/01_working_with_vector_and_matrix.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNyIZ78Gttr4od8APb8pXKB",
+      "authorship_tag": "ABX9TyPL5n+3FZ08fuhMEv0E6Muz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,7 +70,7 @@
         "id": "B2azLQjB0cJt",
         "outputId": "2730ec00-d34c-44c0-ed47-1ccb8fac9c34"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -98,7 +98,7 @@
         "id": "2lgYnstk1ctC",
         "outputId": "a2609394-91b8-43a2-c181-e165e0b26987"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -145,7 +145,7 @@
         "id": "eUvMCmwz1_Bm",
         "outputId": "879b6aec-5dca-40b9-dada-e3ef425b697d"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -172,7 +172,7 @@
         "id": "xF4HutED2Ygc",
         "outputId": "9c950236-0014-4dbd-d6dd-529bac08e222"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -198,7 +198,7 @@
         "id": "s3r7EWHt2fg-",
         "outputId": "a4ce7456-23a1-4836-b430-15a1c8ea6ec7"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -225,7 +225,7 @@
         "id": "9Qa8S3Dq3Sar",
         "outputId": "163648c4-ec7d-457c-ec9a-7bb63956812c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -252,7 +252,7 @@
         "id": "gZVfsxd33XpZ",
         "outputId": "17d80bf1-c975-4d82-e558-e4729d36b3eb"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -279,7 +279,7 @@
         "id": "JCEZDbJT3ZrQ",
         "outputId": "1d75f6b4-3ba2-44b6-d5e6-1480bc9f4bc4"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -306,7 +306,7 @@
         "id": "uzrKjc0S3gv2",
         "outputId": "c066ff94-ec1f-47ce-e396-f0e2e05db639"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -333,7 +333,7 @@
         "id": "5JgLmA1h3nAn",
         "outputId": "b11cb07f-de2f-4733-95f6-3e8afb1b4fc5"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -359,7 +359,7 @@
         "id": "3NKsUA2g393k",
         "outputId": "083d81e1-455f-4f92-89b6-4af854714b4b"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -388,7 +388,7 @@
         "id": "ddMSWw0X3tlT",
         "outputId": "e6741af9-d232-4f89-e0fb-919f8323b8f2"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -416,7 +416,7 @@
         "id": "_lSHjgS132rO",
         "outputId": "a2f09ca9-b685-4d02-9071-3a048aa6af83"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -444,7 +444,7 @@
         "id": "uHIn1Vpl4JCv",
         "outputId": "3a398416-138e-4c4a-c456-6515354b6e78"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -472,7 +472,7 @@
         "id": "YXeB4y_y4RkX",
         "outputId": "e7260b9e-0207-4ddf-c653-dcb409c3465e"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -517,7 +517,7 @@
         "id": "2MjiNWDJ4YHz",
         "outputId": "2d19bedf-3e9b-4ee7-cda4-caf261630bdd"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -544,7 +544,7 @@
         "id": "IRjOeoYf4uWw",
         "outputId": "b60bb229-4463-4af5-a9f2-1aac90a82745"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -571,7 +571,7 @@
         "id": "2c7myP9240G9",
         "outputId": "0ede5d19-3378-48de-ceb0-0a6cfaf54ef0"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -620,7 +620,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -649,7 +649,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -694,7 +694,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -721,7 +721,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -748,7 +748,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -775,7 +775,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -818,7 +818,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -845,7 +845,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -872,7 +872,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -899,7 +899,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -926,7 +926,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -970,7 +970,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -998,7 +998,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1026,7 +1026,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1055,7 +1055,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1082,7 +1082,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1125,7 +1125,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1154,7 +1154,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1181,7 +1181,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1211,9 +1211,366 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Create matrix\n",
+        "matrix = np.array([\n",
+        "    [1, 2, 3],\n",
+        "    [4, 5, 6],\n",
+        "    [7, 8, 9]\n",
+        "])\n",
+        "\n",
+        "# Flatten matrix\n",
+        "matrix.flatten()"
+      ],
+      "metadata": {
+        "id": "w84FwD5sLC-p",
+        "outputId": "ca3f3b9b-dc45-4983-c1bb-674be383ce93",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3, 4, 5, 6, 7, 8, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Alternatively, we can use reshape to create a row vector\n",
+        "matrix.reshape(1, -1)"
+      ],
+      "metadata": {
+        "id": "F0GxKJvypAGZ",
+        "outputId": "41634ae2-1bb0-4c21-c22a-9dd47b2f99e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 2, 3, 4, 5, 6, 7, 8, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Alternatively, we can use reshape to create a column vector\n",
+        "matrix.reshape(-1, 1)"
+      ],
+      "metadata": {
+        "id": "HWALRx2ApLak",
+        "outputId": "774842f6-20b0-4b18-aabf-0a0a236f4ede",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1],\n",
+              "       [2],\n",
+              "       [3],\n",
+              "       [4],\n",
+              "       [5],\n",
+              "       [6],\n",
+              "       [7],\n",
+              "       [8],\n",
+              "       [9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# flattening very large arrays and speeding up code\n",
+        "matrix_a = np.array([\n",
+        "    [1, 2, 3],\n",
+        "    [4, 5, 6],\n",
+        "    [7, 8, 9]\n",
+        "])\n",
+        "\n",
+        "matrix_b = np.array([\n",
+        "    [11, 22, 33],\n",
+        "    [44, 55, 66],\n",
+        "    [77, 88, 99]\n",
+        "])\n",
+        "\n",
+        "# Create a list of matrices\n",
+        "matrix_list = [matrix_a, matrix_b]\n",
+        "# Flatten the entire list of matrices\n",
+        "np.ravel(matrix_list)"
+      ],
+      "metadata": {
+        "id": "4Y0R6Kc6pe0-",
+        "outputId": "6ee62fdc-9885-44a5-de70-4910e9eea9b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 11, 22, 33, 44, 55, 66, 77, 88,\n",
+              "       99])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Matrix Rank"
+      ],
+      "metadata": {
+        "id": "kIaTl6-Kp-d4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matrix = np.array([\n",
+        "    [1, 1, 1],\n",
+        "    [1, 1, 10],\n",
+        "    [1, 1, 15]\n",
+        "])\n",
+        "\n",
+        "# Return matrix rank\n",
+        "np.linalg.matrix_rank(matrix)"
+      ],
+      "metadata": {
+        "id": "kLtqiFMjqBE9",
+        "outputId": "86e0e0be-27cb-4a7a-b6e4-3ec0990ae432",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Matrix Diagonal"
+      ],
+      "metadata": {
+        "id": "AIYWmvJHqc1_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create matrix\n",
+        "matrix = np.array([\n",
+        "    [1, 2, 3],\n",
+        "    [4, 5, 6],\n",
+        "    [7, 8, 9]\n",
+        "])\n",
+        "\n",
+        "# Return diagonal elements\n",
+        "matrix.diagonal()"
+      ],
+      "metadata": {
+        "id": "IxM0yYQZqecj",
+        "outputId": "0b45bccc-555e-483b-c741-371c8b469573",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 5, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Return diagonal one above the main diagonal\n",
+        "matrix.diagonal(offset=1)"
+      ],
+      "metadata": {
+        "id": "Pz1GGPUeq3rc",
+        "outputId": "fa9d17f6-214b-4031-ee33-be4efc31a330",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([2, 6])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Return diagonal one below the main diagonal\n",
+        "matrix.diagonal(offset=-1)"
+      ],
+      "metadata": {
+        "id": "CbAosjRnq8ET",
+        "outputId": "99dc24e2-6642-4108-d4d7-cba5a25a9471",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([4, 8])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Matrix Trace"
+      ],
+      "metadata": {
+        "id": "j9U92RQ8rOOz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create matrix\n",
+        "matrix = np.array([\n",
+        "    [1, 2, 3],\n",
+        "    [4, 5, 6],\n",
+        "    [7, 8, 9]\n",
+        "])\n",
+        "\n",
+        "# Return trace\n",
+        "matrix.trace()"
+      ],
+      "metadata": {
+        "id": "fdg2yZd_rP2o",
+        "outputId": "c460839c-4f63-41a6-8bc7-35fd386c785b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Return diagonal and sum elements\n",
+        "sum(matrix.diagonal())"
+      ],
+      "metadata": {
+        "id": "_eAgoHwJrcC4",
+        "outputId": "56f555d5-0e0d-4463-8084-39129f9b576f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Dot Products"
+      ],
+      "metadata": {
+        "id": "iFrM3btErhkn"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "w84FwD5sLC-p"
+        "id": "K5gGTNVjriRD"
       },
       "execution_count": null,
       "outputs": []
